apps/backstage/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: backstage
    backstage.io/kubernetes-id: backstage
    # istio-injection: enabled #TODO: Fix Istio
  name: backstage
spec:
  finalizers:
  - kubernetes
