apps/backstage/base/postgres.yaml
# kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.2-alpine
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 5432
          # livenessProbe:
          #   exec:
          #     command:
          #       - sh
          #       - '-c'
          #       - exec pg_isready --host $POD_IP
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 6
          readinessProbe:
            exec:
              command:
              - psql
              - "-h"
              - localhost
              - "-c"
              - SELECT 1
            period_seconds: 2
            timeout_seconds: 2
            failure_threshold: 30
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m

      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-storage-claim
