apps/backstage/base/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backstage
  namespace: backstage
  annotations:
    backstage.io/kubernetes-id: backstage
spec:
  hosts:
  - "backstage.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: backstage
