apps/backstage/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: backstage-policy
  namespace: backstage
spec:
  selector:
    matchLabels:
      app: backstage
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
      when:
        - key: request.headers[x-envoy-external-address]
          notValues:
            - "94.62.74.120" # Diego
